Initial settings refactor, many other refactorings

--- a/src/MetroFramework5/Components/MetroComponentBase.tt
+++ b/src/MetroFramework5/Components/MetroComponentBase.tt
@@ -54,7 +54,7 @@ namespace MetroFramework5.Components
 
 	// I wish we had mix-ins...
 
-	string[] components = new string[] 
+	var components = new string[] 
 		{ 
 			"Component", 
 			"ToolTip"
