Check scaling for form, if already has been done then don't scalscale again.

--- a/src/Shotr.Core/Controls/DpiScaling/DpiScaledControlBase.tt
+++ b/src/Shotr.Core/Controls/DpiScaling/DpiScaledControlBase.tt
@@ -61,12 +61,7 @@ namespace Shotr.Core.Controls.DpiScaling {
 
         protected override void OnPaint(PaintEventArgs e) 
         {
-            if (!_alreadyRan)
-            {
-                _alreadyRan = true;
-
-                Scale();
-            }
+            Scale();
 
             if (BasePaint) 
             {
@@ -78,6 +73,15 @@ namespace Shotr.Core.Controls.DpiScaling {
         {
             if (DpiScaler.NotDpiScaling(this))
             {    
+                return;
+            }
+
+            if (!_alreadyRan)
+            {
+                _alreadyRan = true;
+            }
+            else 
+            {
                 return;
             }
 
