Better scaling, fix font scaling, also patch DPI scaling if scree screen dpi changes, etc

--- a/src/Shotr.Core/Controls/DpiScaling/DpiScaledControlBase.tt
+++ b/src/Shotr.Core/Controls/DpiScaling/DpiScaledControlBase.tt
@@ -51,7 +51,7 @@ namespace Shotr.Core.Controls.DpiScaling {
 
         private void OnDisplaySettingsChanged(object? sender, EventArgs args) 
         {
-            Scale();
+            Scale(ignoreCheck: true);
         }
 
         protected virtual void OnControlScaled(float scalingFactor) 
@@ -60,7 +60,7 @@ namespace Shotr.Core.Controls.DpiScaling {
 
         protected override void OnPaint(PaintEventArgs e) 
         {
-            Scale();
+            Scale(onPaint: true);
 
             if (BasePaint) 
             {
@@ -68,26 +68,29 @@ namespace Shotr.Core.Controls.DpiScaling {
             }
         }
 
-        private void Scale()
+        private void Scale(bool onPaint = false, bool ignoreCheck = false)
         {
             if (DpiScaler.NotDpiScaling(this))
             {    
                 return;
             }
 
-            if (!_alreadyRan)
+            if (onPaint && !ignoreCheck) 
             {
-                _alreadyRan = true;
-            }
-            else 
-            {
-                return;
+                if (!_alreadyRan)
+                {
+                    _alreadyRan = true;
+                }
+                else 
+                {
+                    return;
+                }
             }
 
             if (Scaled)
             {
                 (_originalSize, _originalLocation) = DpiScaler.ScaleControl(this, _originalSize, _originalLocation, <#=control.Item2.ToString().ToLower() #>);
-                Console.WriteLine($"DPI Scaled <#=control.Item1#>: {Text} - Size: {Width}x{Height} (orig {_originalSize.Width}x{_originalSize.Height}), Location: {Location.X}x{Location.Y} (orig: {_originalLocation.X}x{_originalLocation.Y})");
+                Console.WriteLine($"DPI Scaled <#=control.Item1#>: {Text} - Size: {Width}x{Height} (orig {_originalSize.Width}x{_originalSize.Height}), Location: {Location.X}x{Location.Y} (orig: {_originalLocation.X}x{_originalLocation.Y}), {DpiScaler.GetScalingFactor(this)}f");
                 OnControlScaled(DpiScaler.GetScalingFactor(this));
             }
         }
